# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2

  03 Sep 2005; Mike Frysinger <vapier@gentoo.org>:

    Clean up netmount and don't unmount afs filesystems if the user has the 
    afs-client init.d script running.

  03 Sep 2005; Martin Schlemmer <azarah@gentoo.org>:

    Add warning about having LANG in env_whitelist, add TERM to system
    env_whitelist, set argv[0] to '/bin/bash' and not 'runscript'.

  02 Sep 2005; Roy Marples <uberlord@gentoo.org>:

    Fixed netplug from stopping on the wrong interface

* baselayout-1.12.0_pre8 (02 Sep 2005)

  02 Sep 2005; Martin Schlemmer <azarah@gentoo.org>:

    Split the enviroment whitelist for runscript into a system and user part.
    Update it to use LIBDIR so that we can set 'lib' or 'lib64'.

  02 Sep 2005; Roy Marples <uberlord@gentoo.org>:

    netplug module added + documentation for it.

    We also set MTU in the pre_start of ifconfig/iproute2 incase a DHCP
    client or similar needs it.

  01 Sep 2005; Roy Marples <uberlord@gentoo.org>:

    Altered iproute2 to use the same lo logic as ifconfig below

    Fixed ifconfig bringing lo up and then working out aliases, bug #104415

  31 Aug 2005; Martin Schlemmer <azarah@gentoo.org>:

    Add the initial stuff for filtering of env variables for the rc-system.

    Use /sbin/functions.sh instead of /etc/init.d/functions.sh.

    Fix for the 'local starts and stops unneeded' issue when calling /sbin/rc
    in some cases.

* baselayout-1.12.0_pre7 (31 Aug 2005)

  31 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    service status requests (either by /etc/init.d/foo status or rc-status)
    now update the service status by checking daemons and/or pidfiles to check
    if they are still running or not. To update the status in your own code,
    source "${svclib}/sh/rc-daemon.sh" and call
    update_service_status "${service}"

    Trimmed $Header$ from a few files
